--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,7 @@
 
 @charset "utf-8";
 
-$link-color: red;
-
+$global-font-family: Monaco, Consolas, "Lucida Console", monospace !default;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
