--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,5 +4,10 @@
 
 @charset "utf-8";
 
+$link-color: #FF0000 !default;
+$serif: 'IBM Plex Serif', Georgia, Times, serif !default;
+$sans-serif: 'IBM Plex Sans', Georgia, Times, serif !default;
+$monospace: 'IBM Plex Mono', Georgia, Times, serif !default;
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
