--- a/_includes/newsletter-signup.html
+++ b/_includes/newsletter-signup.html
@@ -1,1 +1,1 @@
-<iframe src="https://embeds.beehiiv.com/37db567b-1484-4bb3-8430-ed1d569535ca?slim=true" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe>
+<div align="center"><iframe src="https://embeds.beehiiv.com/37db567b-1484-4bb3-8430-ed1d569535ca?slim=true" data-test-id="beehiiv-embed" width="80%" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
