--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=IBM+Plex+Serif&family=IBM+Plex+Mono" rel="stylesheet" type="text/css">
 
+<link rel="me" href="https://mastodon.online/@polgarp">
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
