--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,4 +8,11 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl | relative_url }}/assets/images/favicon/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="192x192" href="{{ site.baseurl | relative_url }}/assets/images/favicon/android-chrome-192x192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="{{ site.baseurl | relative_url }}/assets/images/favicon/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl | relative_url }}/assets/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl | relative_url }}/assets/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="{{ site.baseurl | relative_url }}/assets/images/favicon/site.webmanifest">
+
 <!-- end custom head snippets -->
