Update phosphor icons

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,6 +6,10 @@
 
 <link rel="me" href="https://mastodon.online/@polgarp">
 
+
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl | relative_url }}/assets/images/favicon/apple-touch-icon.png">
